--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -40,6 +40,7 @@ img {
   background-color: #1e1b4b;
   color: #f5f5f4;
   width: 50%;
+  position: relative;
 }
 
 .sub-header,
@@ -76,4 +77,78 @@ img {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   padding-bottom: 10px;
+}
+
+.info-btn {
+  height: 2rem;
+  width: 5rem;
+  background-color: #ea580c;
+  color: #1e1b4b;
+  border: none;
+  border-radius: 10px;
+  font-weight: bold;
+  text-align: center;
+  position: absolute;
+  left: 50rem;
+  top: 8rem;
+  cursor: pointer;
+}
+.profile-btn {
+  height: 2rem;
+  width: 5rem;
+  background-color: #ea580c;
+  color: #1e1b4b;
+  border: none;
+  border-radius: 10px;
+  font-weight: bold;
+  text-align: center;
+  position: absolute;
+  left: 50rem;
+  top: 11.5rem;
+  cursor: pointer;
+}
+
+.work-btn {
+  height: 2rem;
+  width: 5rem;
+  background-color: #ea580c;
+  color: #1e1b4b;
+  border: none;
+  border-radius: 10px;
+  font-weight: bold;
+  text-align: center;
+  position: absolute;
+  left: 50rem;
+  top: 25rem;
+  cursor: pointer;
+}
+
+.edu-btn {
+  height: 2rem;
+  width: 5rem;
+  background-color: #ea580c;
+  color: #1e1b4b;
+  border: none;
+  border-radius: 10px;
+  font-weight: bold;
+  text-align: center;
+  position: absolute;
+  left: 50rem;
+  top: 10.5rem;
+  cursor: pointer;
+}
+
+.skill-btn {
+  height: 2rem;
+  width: 5rem;
+  background-color: #ea580c;
+  color: #1e1b4b;
+  border: none;
+  border-radius: 10px;
+  font-weight: bold;
+  text-align: center;
+  position: absolute;
+  left: 50rem;
+  top: 7rem;
+  cursor: pointer;
 }
